--- a/src/app/components/formulario/formulario.component.html
+++ b/src/app/components/formulario/formulario.component.html
@@ -1,12 +1,16 @@
 <div class="container-fluid">
   <div class="inputs">
-    <div class="col-4">
+    <div class="col-3">
       <div class="mb-1">Nome:</div>
       <input type="text" class="form-control" [(ngModel)]="restaurante" />
     </div>
-    <div class="col-4">
+    <div class="col-3">
       <div class="mb-1">Quantidade:</div>
       <input type="number" class="form-control" [(ngModel)]="qtdeRestaurante" />
+    </div>
+    <div class="col-3">
+      <div class="mb-1">Tipo:</div>
+      <input type="text" class="form-control" [(ngModel)]="tipoRestaurante" />
     </div>
   </div>
   <div class="d-flex flex-row-reverse">
